# gitid

./: .gitignore  Cargo.toml  DESIGN_HANDOFF.md  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/git-credential-gitid/: Cargo.toml
crates/git-credential-gitid/src/: main.rs
crates/gitid-cli/: Cargo.toml
crates/gitid-cli/src/: main.rs
crates/gitid-core/: Cargo.toml
crates/gitid-core/src/: config_writer.rs  detect.rs  error.rs  guard.rs  keychain.rs  learn.rs  lib.rs  profile.rs  resolver.rs  ssh.rs  store.rs  team.rs
crates/gitid-core/tests/: integration.rs
tauri-app/: index.html  package-lock.json  package.json
tauri-app/src/: App.tsx  index.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: commands.rs  main.rs
tauri-app/src/components/: CliInstallBanner.tsx  DoctorView.tsx  GuardPanel.tsx  HelpPanel.tsx  ProfileEditor.tsx  ProfileList.tsx  RuleEditor.tsx  SetupWizard.tsx  StatusBar.tsx  SuggestionsPanel.tsx
tauri-app/src/components/ui/: primitives.tsx
tauri-app/src/lib/: hooks.ts  tauri-api.ts
vscode-extension/: package.json
vscode-extension/src/: extension.ts
