[package]
name = "gitid-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI tool for managing GitID profiles and rules"

[[bin]]
name = "gitid"
path = "src/main.rs"

[dependencies]
gitid-core = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dialoguer = "0.11"
console = "0.15"
tabled = "0.17"
which = "7"
shellexpand = "3"
serde_json = "1"
