[package]
name = "gitid-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for GitID — profile storage, resolution, and config management"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
dirs = { workspace = true }
glob = "0.3"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
which = "7"
shellexpand = "3"

[dev-dependencies]
tempfile = "3"
