[package]
name = "gitid-tauri"
version = "0.1.0"
edition = "2021"
description = "GitID desktop application"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
gitid-core = { path = "../../crates/gitid-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
shellexpand = "3"
which = "7"

[build-dependencies]
tauri-build = { version = "2", features = [] }
